<resources>
    <string name="app_name">Gait</string>
    <string name="gait">GAIT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome,</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="reg">Register</string>
    <string name="or">or</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username :</string>
    <string name="age">Age :</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="street_address">Street Address :</string>
    <string name="city">City :</string>
    <string name="state">State :</string>
    <string name="zip_code">Zip Code :</string>
    <string name="become_a_gait">Become A Gait?</string>
    <string name="save_info">Save Info</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="request_gait">Request Gait</string>
    <string name="walker">Walker</string>
    <string name="sitter">Sitter</string>
    <string name="confirm_gait">Confirm Gait</string>
    <string name="cancel">Cancel Gait</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="schedule_gait">Schedule Gait</string>
    <string name="save">Save Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="display_name">Display Name :</string>
    <string name="address">Address :</string>
    <string name="msg_client">Message Client</string>
    <string name="end_job">End Job</string>
    <string name="message_gait">Message Gait</string>
    <string name="rate_your_gait">Rate Your Gait</string>
    <string name="leave_additional_comment">Leave Additional Comment</string>
    <string name="comment">Comment :</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_picture_of_your_pet_s">Upload a picture of your dog(s)</string>
    <string name="rate_client">Rate this Job.</string>
    <string name="job_end">Gait has ended the job</string>
    <string name="proceed">Proceed to Review Screen</string>
    <string name="msg_gait">Message Gait</string>
    <string name="already">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_here">Type Here</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="added_toast">Job added to your schedule</string>
    <string name="deny">DENY</string>
    <string name="accept">Accept</string>
</resources>
