<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#bb1b212E">

    <FrameLayout
        android:id="@+id/request_frame"
        android:layout_width="match_parent"
        android:layout_height="643dp"
        android:layout_marginTop="380dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/schedule_gait"
            android:textColor="@android:color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/walker_check2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walker"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/sitter_check2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sitter"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/from_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/from"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/to_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:hint="@string/to"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm_request2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_gait"
                android:theme="@style/AppTheme.DarkerButton" />

            <Button
                android:id="@+id/cancel_request2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/cancel"
                android:theme="@style/AppTheme.DarkerButton" />

        </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>