<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:text="@string/gait"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/emailText2"
        android:inputType="textEmailAddress"
        android:layout_width="325dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorAccent"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/passwordText2"
        android:inputType="textPassword"
        android:layout_width="325dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/loginButton2"
        android:theme="@style/AppTheme.DarkButton"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/login"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>