<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.gheggie.gait.MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:id="@+id/loginFrame">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="130dp"
                android:layout_height="66dp"
                android:text="@string/gait"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:layout_marginTop="100dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailText"
                    android:inputType="textEmailAddress"
                    android:layout_width="325dp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="@string/email"/>

                <EditText
                    android:id="@+id/passwordText"
                    android:inputType="textPassword"
                    android:layout_width="325dp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"/>

                <EditText
                    android:id="@+id/confirmPasswordText"
                    android:inputType="textPassword"
                    android:layout_width="325dp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:hint="@string/confirm_password"/>

                <Button
                    android:id="@+id/registerButton"
                    android:theme="@style/AppTheme.DarkButton"
                    android:layout_width="175dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    android:text="@string/reg"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_marginTop="25dp"
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent"
                        android:orientation="horizontal">
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="8dp"
                        android:textSize="17sp"
                        android:text="@string/or"/>

                    <LinearLayout
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent"
                        android:orientation="horizontal">
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="150dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/already"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/login_here"
                        android:textSize="18sp"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>