<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.gheggie.gait.RegisterActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="71dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.041">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="24dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/street_address"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/street_address"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <EditText
                    android:id="@+id/city_text"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/city"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />

                <EditText
                    android:id="@+id/state_text"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/state"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/become_a_gait"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/gait_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:buttonTint="@color/colorAccent" />

            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/save_info"
                android:textSize="15sp"
                android:layout_marginTop="50dp"
                android:theme="@style/AppTheme.DarkButton"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />
        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
